# VeldrixAI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  controller.py  docker-compose.prod.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-sdk.yml
backend/: .env.example  .gitignore
backend/auth/: requirements.txt
backend/auth/app/: main.py  vault.py
backend/auth/app/api/: api_keys.py  (+4 more)
backend/auth/migrations/: add_billing_fields_to_users.sql  add_stripe_customer_lookup_hash.sql
backend/auth/scripts/: backfill_stripe_lookup_hash.py
backend/auth/tests/: test_auth.py  test_postgres.py  test_timezone.py  test_vault.py
backend/connectors/: Dockerfile  requirements.txt
backend/connectors/migrations/: 000_full_schema.sql  001_kan14_reports_audit.sql  002_add_trust_evaluation_type.sql  003_kan16_soft_delete.sql  004_kan20_saved_prompts.sql  005_add_report_name_vx_id.sql  006_add_audit_intelligence_fields.sql  006_add_timezone_fields_to_audit_logs.sql  007_README.md  007_remove_duplicate_audit_trails.sql
backend/connectors/src/: main.py
backend/connectors/tests/: test_timezone.py
backend/core/: requirements.txt
backend/core/config/: nvidia_models.yaml
backend/core/src/: __init__.py  config.py  main.py
backend/core/tests/: conftest.py  test_circuit_breaker_redis.py  test_latency.py  test_nim_pillars.py  test_sdk.py  test_trust_evaluation.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.tests.json
frontend/app/: globals.css  hero-animation.css  landing.css  layout.tsx  page.tsx
frontend/app/billing/: page.tsx
frontend/app/dashboard/: dashboard.css  layout.tsx  page.tsx  veldrix-tokens.css
frontend/app/docs/: docs.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: api-keys-content.tsx  auth-form.tsx  brand-logo.tsx  dashboard-app.tsx  dashboard-content.tsx  dashboard-layout.tsx  footer.tsx  hero-animation.tsx  logo-carousel.tsx  model-carousel.tsx
frontend/components/auth/: AuthLayout.tsx  AuthLeftDefault.tsx  LiveTrustFeed.tsx
frontend/components/billing/: CheckoutButton.tsx  PricingCard.tsx
frontend/components/charts/: BillingVelocityChart.tsx
frontend/components/docs/: DocInteractivity.tsx
frontend/components/landing/: PricingSection.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/notifications/: BrowserPermissionPrompt.tsx  NotificationBell.tsx  NotificationPanel.tsx
frontend/components/settings/: account-tab.tsx  api-keys-tab.tsx  billing-tab.tsx  developer-tab.tsx  notifications-tab.tsx  policies-tab.tsx  security-tab.tsx
frontend/hooks/: useNotificationSocket.ts
frontend/mock/: audit-trails.ts  policies.ts  prompts.ts  sdk.ts  settings.ts  stats.ts  types.ts
sdk/: CHANGELOG.md  README.md  SDK_DESIGN.md  pyproject.toml  run_tests.bat
sdk/examples/: basic_usage.py  quickstart_anthropic.py  quickstart_asgi.py  quickstart_async.py  quickstart_global_intercept.py  quickstart_langchain.py  quickstart_litellm.py  quickstart_openai.py  requirements.txt
sdk/tests/: test_bounded_queue.py  test_client_breaker.py  test_enterprise_ga.py  test_fixes.py  test_guard_decorator.py  test_http_interceptor.py  test_interceptor.py  test_middleware.py  test_rate_limiter.py  test_streaming.py  test_transport.py
sdk/veldrixai/: __init__.py  client.py  exceptions.py  http_interceptor.py  interceptor.py  middleware.py  models.py  providers.py  streaming.py  transport.py
sdk/veldrixai/_transport/: __init__.py  rate_limiter.py
sdk/veldrixai/adapters/: __init__.py  anthropic.py  aws_bedrock.py  cohere.py  deepseek.py  generic.py  google.py  huggingface.py  langchain.py  litellm.py  llamaindex.py  mistral.py  ollama.py  openai.py  qwen.py
(+146 files in other folders)
