[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "veldrixai"
version         = "1.0.0"
description     = "Runtime trust infrastructure for AI applications — five-pillar evaluation via a single decorator"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"
authors         = [{ name = "VeldrixAI", email = "sdk@veldrix.ai" }]
keywords        = ["ai", "governance", "safety", "trust", "llm", "guardrails", "nvidia", "nim", "compliance"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage      = "https://veldrixai.ca"
Documentation = "https://docs.veldrixai.ca"
Repository    = "https://github.com/veldrixai/veldrixai-python"
"Bug Tracker" = "https://github.com/veldrixai/veldrixai-python/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["veldrixai*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
